--- a/style.css
+++ b/style.css
@@ -97,11 +97,19 @@ section {
     padding: 2em;
 }
 
-#tekst_1{
-text-align: justify;
-margin-left: 25%;
-margin-right: 25%;
-font-weight: bold;
+#tekst_1 {
+    text-align: justify;
+    margin: 0 auto;
+    max-width: 800px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#tekst_1 p {
+    font-size: 16px;
+    line-height: 1.6;
 }
 
 .fotorama{
@@ -120,10 +128,10 @@ font-weight: bold;
     }
 
 hr {
-    border: 0; /* Ukloni uobičajeni okvir */
-    height: 1px; /* Debljina linije */
-    background-color: #43525a; /* Boja linije */
-    margin: 20px 0; /* Margine iznad i ispod linije */
+    border: 0; 
+    height: 1px; 
+    background-color: #6c8593;
+    margin: 20px 0; 
     margin-left: 25%;
     margin-right: 25%;
     
@@ -145,14 +153,47 @@ a:hover {
     cursor:pointer;  
 }
 
- .teme{
-margin-left: 25%;
-margin-right: 25%;
-font-size: 20px;
+.teme {
+    text-align: center;
+    margin: 20px auto;
+    max-width: 600px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
- }li{
-    padding: 10px;
- }
+#tema {
+    color: #3498db;
+    font-size: 34px;
+    margin-bottom: 20px;
+}
+
+.teme p {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #555;
+}
+
+.teme b {
+    font-weight: bold;
+    color: #3498db;
+}
+
+.teme ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.teme li {
+    margin-bottom: 8px;
+}
+
+.teme hr {
+    border: 1px solid #ddd;
+    margin: 20px 0;
+}
+
 
 
 
@@ -161,7 +202,6 @@ font-size: 20px;
     margin-right: 25%;
     font-size: 20px;
 }
-
 
 .rokovi{
     margin-left: 25%;
@@ -210,7 +250,11 @@ font-size: 20px;
     margin-right: 45%;
 }
 
-#tekst3{
-    text-align: justify;
+footer {
+    background-color: #43525a;
+    color: white;
+    text-align: center;
+    padding: 1em;
+    bottom: 0;
 }
 
