--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ hr {
     height: 1px; 
     background-color: #6c8593;
     margin: 20px 0; 
-    margin-left: 25%;
-    margin-right: 25%;
+   
 }
 
 /*HEADER I NAVIGACIJA*/
@@ -24,13 +23,7 @@ header {
     padding: 1em;
 }
 
-#pocetna{
-    margin-right: 24%;
-    font-size: 30px;
-    border: white solid 1px;
-    border-radius: 10px;
-    padding: 10px;
-}
+
 nav {
     background-color: #3e4b51;
     padding: 1em;
@@ -127,7 +120,6 @@ section {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    border-radius: 10%;
 } 
 
 /*OPĆENITO O KONFERENCIJI*/
@@ -149,8 +141,7 @@ section {
 
 #tekst_2{
     text-align: justify;
-    margin-left: 25%;
-    margin-right: 25%;
+    
     
     }
 
@@ -205,8 +196,7 @@ section {
 
 /*ROKOVI KONFERENCIJE*/
 .rokovi{
-    margin-left: 25%;
-    margin-right: 25%;
+  
     font-size: 20px;
     text-align: center;
     margin: 20px auto;
@@ -221,37 +211,32 @@ section {
 
 /*LOKACIJA KONFERENCIJE*/
 .lokacija{
-    margin-left: 25%;
-    margin-right: 25%;
+ 
     font-size: 20px;
      }
     
 /*SMJEŠTAJ*/
      .smjestaj{
-        margin-left: 25%;
-        margin-right: 25%;
+      
         font-size: 20px;
 
      }
 
 /*JAVNI PRIJEVOZ*/
      .javni_prijevoz{
-        margin-left: 25%;
-        margin-right: 25%;
+       
         font-size: 20px;
      }
 
 /*PRIVOLA ZA FOTOGRAFIRANJE*/
 .privola{
-    margin-left: 25%;
-    margin-right: 25%;
+  
     font-size: 20px;
 }
 
 /*SPONZORI KONFERENCIJE*/
 .sponzori{
-    margin-left: 25%;
-    margin-right: 25%;
+ 
     font-size: 20px;
 }
 
@@ -305,9 +290,14 @@ footer {
     background-color: #43525a;
     color: white;
     text-align: center;
-    padding: 2px;
-    width: 99.75%;
+    padding: 5px;
+    position: absolute;
     bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+}
+
+.page-container{
     position: relative;
-    margin-top: 15px;
+    min-height: 100vh;
 }
