--- a/style.css
+++ b/style.css
@@ -8,6 +8,15 @@ body {
 .content{
     flex: 1;
 }
+
+#poster{
+    margin: 0 auto;
+    max-width: 800px;
+    font-weight: bold;
+    color: #3498db;
+
+}
+
 hr {
     border: 0; 
     height: 1px; 
@@ -508,3 +517,4 @@ footer {
       
       
 }
+
